syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.proto";
option java_outer_classname = "ContractProto";

package aurigraph.v11;

import "google/protobuf/timestamp.proto";
import "common.proto";

// ContractService - Smart contract deployment, execution, and management
service ContractService {
    // Deploy a new smart contract
    rpc DeployContract(ContractDeployRequest) returns (ContractDeployResponse);

    // Execute a contract method
    rpc ExecuteContract(ContractExecutionRequest) returns (ContractExecutionResponse);

    // Get contract state
    rpc GetContractState(ContractStateRequest) returns (ContractStateResponse);

    // Stream contract events
    rpc StreamContractEvents(ContractEventStreamRequest) returns (stream ContractEvent);

    // Upgrade contract
    rpc UpgradeContract(ContractUpgradeRequest) returns (ContractUpgradeResponse);

    // Get contract metadata
    rpc GetContractMetadata(ContractMetadataRequest) returns (ContractMetadata);
}

// Contract deployment request
message ContractDeployRequest {
    string contract_name = 1;
    string contract_version = 2;
    bytes bytecode = 3;
    bytes abi = 4;
    string deployer_address = 5;
    string constructor_args = 6;
    double gas_limit = 7;
    double gas_price = 8;
    map<string, string> metadata = 9;
}

// Contract deployment response
message ContractDeployResponse {
    string contract_address = 1;
    string transaction_hash = 2;
    bool success = 3;
    string error_message = 4;
    double gas_used = 5;
    google.protobuf.Timestamp deployed_at = 6;
    ContractMetadata metadata = 7;
}

// Contract execution request
message ContractExecutionRequest {
    string contract_address = 1;
    string method_name = 2;
    repeated string parameters = 3;
    string caller_address = 4;
    double gas_limit = 5;
    double gas_price = 6;
    string value = 7;  // Amount to send with call
    bool is_view_call = 8;  // Read-only call
}

// Contract execution response
message ContractExecutionResponse {
    string result = 1;
    bytes result_bytes = 2;
    string transaction_hash = 3;
    bool success = 4;
    string error_message = 5;
    double gas_used = 6;
    repeated ContractEvent events = 7;
    repeated ContractStateChange state_changes = 8;
    google.protobuf.Timestamp executed_at = 9;
}

// Contract state change (renamed from StateChange to avoid collision)
message ContractStateChange {
    string key = 1;
    string old_value = 2;
    string new_value = 3;
    string change_type = 4;
}

// Contract state request
message ContractStateRequest {
    string contract_address = 1;
    repeated string storage_keys = 2;
    bool include_full_state = 3;
    int64 at_block_height = 4;  // Historical state at block
}

// Contract state response
message ContractStateResponse {
    string contract_address = 1;
    map<string, bytes> state = 2;
    string state_root = 3;
    int64 block_height = 4;
    google.protobuf.Timestamp timestamp = 5;
}

// Contract event stream request
message ContractEventStreamRequest {
    string contract_address = 1;
    repeated string event_names = 2;
    int64 from_block = 3;
    int64 to_block = 4;
    bool follow_head = 5;  // Continue streaming new events
}

// Contract event
message ContractEvent {
    string event_name = 1;
    string contract_address = 2;
    string transaction_hash = 3;
    int64 block_height = 4;
    int32 log_index = 5;
    repeated string topics = 6;
    bytes data = 7;
    map<string, string> decoded_data = 8;
    google.protobuf.Timestamp timestamp = 9;
}

// Contract upgrade request
message ContractUpgradeRequest {
    string contract_address = 1;
    bytes new_bytecode = 2;
    bytes new_abi = 3;
    string upgrader_address = 4;
    string migration_data = 5;
    double gas_limit = 6;
}

// Contract upgrade response
message ContractUpgradeResponse {
    string new_implementation_address = 1;
    string transaction_hash = 2;
    bool success = 3;
    string error_message = 4;
    string previous_version = 5;
    string new_version = 6;
    google.protobuf.Timestamp upgraded_at = 7;
}

// Contract metadata request
message ContractMetadataRequest {
    string contract_address = 1;
    bool include_abi = 2;
    bool include_source = 3;
}

// Contract metadata
message ContractMetadata {
    string contract_address = 1;
    string contract_name = 2;
    string version = 3;
    string deployer = 4;
    google.protobuf.Timestamp deployed_at = 5;
    bytes abi = 6;
    string source_code = 7;
    string compiler_version = 8;
    bool is_upgradeable = 9;
    string proxy_address = 10;
    map<string, string> custom_metadata = 11;
}
